refactor: 나만의 목록 조회, 저장 목록 조회 Manager->Service 구조로 리팩토링